// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ClayLanguagePicker renders 1`] = `
<div>
  <button
    aria-activedescendant=""
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-label="Select a language, current language: English (United States)."
    class="form-control-select btn btn-secondary"
    role="combobox"
    tabindex="0"
    type="button"
  >
    <span
      class="inline-item-before"
    >
      <svg
        class="lexicon-icon lexicon-icon-en-us"
        role="presentation"
      >
        <use
          href="/path/to/svg#en-us"
        />
      </svg>
    </span>
    <span
      class="font-weight-normal mr-2"
    >
      en-US
    </span>
  </button>
</div>
`;

exports[`ClayLanguagePicker renders a class name for the trigger 1`] = `
<div>
  <button
    aria-activedescendant=""
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-label="Select a language, current language: English (United States)."
    class="trigger-class form-control-select btn btn-secondary"
    role="combobox"
    tabindex="0"
    type="button"
  >
    <span
      class="inline-item-before"
    >
      <svg
        class="lexicon-icon lexicon-icon-en-us"
        role="presentation"
      >
        <use
          href="/path/to/svg#en-us"
        />
      </svg>
    </span>
    <span
      class="font-weight-normal mr-2"
    >
      en-US
    </span>
  </button>
</div>
`;

exports[`ClayLanguagePicker renders a small picker 1`] = `
<div>
  <button
    aria-activedescendant=""
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-label="Select a language, current language: English (United States)."
    class="form-control-select btn btn-sm btn-secondary"
    role="combobox"
    tabindex="0"
    type="button"
  >
    <span
      class="inline-item-before"
    >
      <svg
        class="lexicon-icon lexicon-icon-en-us"
        role="presentation"
      >
        <use
          href="/path/to/svg#en-us"
        />
      </svg>
    </span>
    <span
      class="font-weight-normal mr-2"
    >
      en-US
    </span>
  </button>
</div>
`;

exports[`ClayLanguagePicker renders hidding the trigger text 1`] = `
<div>
  <button
    aria-activedescendant=""
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-label="Select a language, current language: English (United States)."
    class="form-control-select hidden-label btn btn-secondary"
    role="combobox"
    tabindex="0"
    type="button"
  >
    <span
      class="inline-item-before"
    >
      <svg
        class="lexicon-icon lexicon-icon-en-us"
        role="presentation"
      >
        <use
          href="/path/to/svg#en-us"
        />
      </svg>
    </span>
  </button>
</div>
`;

exports[`ClayLanguagePicker renders the picker with id 1`] = `
<div>
  <button
    aria-activedescendant=""
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-label="Select a language, current language: English (United States)."
    class="form-control-select btn btn-secondary"
    id="pickerId"
    role="combobox"
    tabindex="0"
    type="button"
  >
    <span
      class="inline-item-before"
    >
      <svg
        class="lexicon-icon lexicon-icon-en-us"
        role="presentation"
      >
        <use
          href="/path/to/svg#en-us"
        />
      </svg>
    </span>
    <span
      class="font-weight-normal mr-2"
    >
      en-US
    </span>
  </button>
</div>
`;

exports[`ClayLanguagePicker renders with custom labels 1`] = `
<div>
  <button
    aria-activedescendant=""
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-label="Trigger Label"
    class="form-control-select btn btn-secondary"
    role="combobox"
    tabindex="0"
    type="button"
  >
    <span
      class="inline-item-before"
    >
      <svg
        class="lexicon-icon lexicon-icon-en-us"
        role="presentation"
      >
        <use
          href="/path/to/svg#en-us"
        />
      </svg>
    </span>
    <span
      class="font-weight-normal mr-2"
    >
      en-US
    </span>
  </button>
</div>
`;

exports[`ClayLanguagePicker renders with translations 1`] = `
<div>
  <button
    aria-activedescendant=""
    aria-expanded="false"
    aria-haspopup="listbox"
    aria-label="Select a language, current language: English (United States)."
    class="form-control-select btn btn-secondary"
    role="combobox"
    tabindex="0"
    type="button"
  >
    <span
      class="inline-item-before"
    >
      <svg
        class="lexicon-icon lexicon-icon-en-us"
        role="presentation"
      >
        <use
          href="/path/to/svg#en-us"
        />
      </svg>
    </span>
    <span
      class="font-weight-normal mr-2"
    >
      en-US
    </span>
  </button>
</div>
`;
